Final changes before Closed Beta V2
